--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -25,87 +25,133 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/login_password"
+        android:id="@+id/reg_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="24dp"
         android:backgroundTint="@color/transpwhite"
         android:ems="10"
-        android:hint=" Password"
+        android:hint="Password"
         android:inputType="textPassword"
         android:padding="20dp"
         android:textColor="#f0f0f0"
         android:textColorHighlight="@android:color/background_light"
         android:textColorHint="@color/transpwhite"
         android:textColorLink="#f0f0f0"
-        app:layout_constraintBottom_toTopOf="@+id/login_imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_email" />
 
     <EditText
-        android:id="@+id/login_email"
+        android:id="@+id/reg_password2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/transpwhite"
         android:ems="10"
-        android:hint=" Email Address"
+        android:hint="Confirm Password"
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textColor="#f0f0f0"
+        android:textColorHighlight="@android:color/background_light"
+        android:textColorHint="@color/transpwhite"
+        android:textColorLink="#f0f0f0"
+        app:layout_constraintBottom_toTopOf="@+id/reg_imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_password"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/reg_email"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/transpwhite"
+        android:ems="10"
+        android:hint="Email Address"
         android:inputType="text|textEmailAddress"
         android:padding="20dp"
         android:textColor="#f0f0f0"
         android:textColorHighlight="@android:color/background_light"
         android:textColorHint="@color/transpwhite"
         android:textColorLink="#f0f0f0"
-        app:layout_constraintBottom_toTopOf="@+id/login_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_name" />
+
+    <EditText
+        android:id="@+id/reg_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="@color/transpwhite"
+        android:ems="10"
+        android:hint="Name"
+        android:inputType="text|textEmailAddress"
+        android:padding="20dp"
+        android:textColor="#f0f0f0"
+        android:textColorHighlight="@android:color/background_light"
+        android:textColorHint="@color/transpwhite"
+        android:textColorLink="#f0f0f0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
-        android:id="@+id/reg_login"
+        android:id="@+id/reg_signin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginBottom="64dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="@string/sign_up"
+        android:text="@string/sign_in"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/login_forgot"
+        app:layout_constraintEnd_toStartOf="@+id/reg_imageView"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/login_forgot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="64dp"
-        android:fontFamily="@font/roboto_bold"
-        android:text="@string/forgot_password"
-        android:textColor="@android:color/background_light"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <ImageView
-        android:id="@+id/login_imageView"
+        android:id="@+id/reg_imageView"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="48dp"
         android:alpha="1"
         android:background="@drawable/round_button"
         android:clickable="true"
         android:hapticFeedbackEnabled="false"
         android:scaleType="center"
-        app:layout_constraintBottom_toTopOf="@+id/login_forgot"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/arrow_right" />
+
+    <ProgressBar
+        android:id="@+id/regProgressBar"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:indeterminate="true"
+        android:theme="@style/progressBarBlue"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="invisible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
